# aoc2024haskell

./: CHANGELOG.md  aoc2024haskell.cabal  gen-barrel.sh  makefile
app/: Main.hs
src/: All.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Solution.hs
