cabal-version:      3.0
name:               aoc2024haskell
-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             fsharpasharp
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall

library
  hs-source-dirs:      src
  build-depends:
        base ^>=4.18.3.0,
        megaparsec,
        text,
        containers,
        array,
        hlint
  exposed-modules: Solution, Day01, Day02, Day03, Day04
  default-language: Haskell2010

executable app
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        aoc2024haskell,
        containers,
        text

    hs-source-dirs:   app

    default-language: Haskell2010
